add abstract object

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,9 +15,8 @@
 <div class="wrap-container">
     <div class="container sidebar">
         <div>
-            <!-- {{item.title}} -->
-            <span (click)="fetchTodos()">first obj</span><br>
-            <span (click)="fetchPosts()">second obj</span>
+            <span (click)="fetchTodos()">Departments </span><br>
+            <span (click)="fetchPosts()">Employees</span>
         </div>
     </div>
 
