--- a/src/app/edit/edit.component.html
+++ b/src/app/edit/edit.component.html
@@ -3,8 +3,14 @@
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, magnam!</p>
 
 <div class="container">
-    <input type="text" [(ngModel)]="inputName" maxlength="25" placeholder="new title...">
-    <div class="grid-objects" *ngFor="let todo of todos ">title {{todo.title}}
-        <button class="btn" (click)="editTodo(todo.id, inputName) ">editTodo</button>
+    <div>
+        <!-- dis: block -->
+        <input type="text" [(ngModel)]="inputName" maxlength="25" placeholder="new title...">
+        <div>
+            <!-- <button class="btn" (click)="editTodo(todo.id, inputName) ">edit</button> -->
+            <div class="grid-objects" *ngFor="let obj of abstractObject">title {{obj.title}} :: {{obj.id}}
+                <button class="btn" (click)="edit(obj.id, inputName)">edit</button>
+            </div>
+        </div>
     </div>
 </div>
