--- a/src/styles.scss
+++ b/src/styles.scss
@@ -95,10 +95,14 @@
         }
     }
     
+    .cat {
+        padding: 40px 0;
+    }
+    
     .card {
         padding: 1rem;
         border: #ccc 1px dotted;
-        margin: 0.7rem 0;
+        // margin: 0.7rem 0;
         min-width: 800px;
         p {
             display: flex;
@@ -112,8 +116,15 @@
     .sidebar {
         padding: 1rem;
         border: #ccc 1px dotted;
-        margin: 0.7rem 0;
+        margin: 0.7rem 10px;
         min-width: 250px;
+        h1 {
+            margin: 10px 8%;
+        }
+        a {
+            cursor: pointer;
+            margin: 10px 17%;
+        }
     }
     
     a {
@@ -160,4 +171,10 @@
             padding: 0.45rem;
             margin: 0 0.25rem;
         }
+    }
+    
+    // .card-cat {
+    // }
+    .card-cat {
+        font-size: 30px;
     }
